--- a/data/index.htm
+++ b/data/index.htm
@@ -4,7 +4,7 @@
   <meta charset="utf-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Etvaldo - ESP32 FastLED Web Server</title>
+  <title>Etvaldo :: ESP32 FastLED Web Server</title>
 
   <!-- request CSS from internet CDN -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous" />
@@ -39,8 +39,9 @@
         <ul class="nav navbar-nav">
           <li class="active"><a href="/">ESP32 FastLED Web Server <span class="sr-only">(current)</span></a></li>
           <!-- <li><a href="/simple.htm" target="_blank" title="Simple Mode">Simple</a></li>
-          <li><a href="/edit.htm" target="_blank" title="Edit Files">Files</a></li>
-          <li><a href="/update" target="_blank" title="Update Firmware">Firmware</a></li> -->
+          <li><a href="/edit.htm" target="_blank" title="Edit Files">Files</a></li> -->
+          <li><a href="http://192.168.0.131/update" title="Update Firmware">Update Firmware</a></li>
+          <!-- <li><a href="http://192.168.0.131:81/webserial" target="_blank" title="WebSerial">WebSerial</a></li> -->
         </ul>
       </div>
     </div>
